fix player height and align

--- a/public_html/static/css/scss/responsive/_mobile.scss
+++ b/public_html/static/css/scss/responsive/_mobile.scss
@@ -31,8 +31,7 @@
 	.player{
 		left: 0!important;
 		right: 0!important;
-		height: 41px;
-		bottom: -1px;
+		height: 40px;
 	}
 	.player .qari figcaption{
 		display: none;
